Fix vertical align

--- a/assets/sass/djangoday.scss
+++ b/assets/sass/djangoday.scss
@@ -134,7 +134,7 @@ a.sponsor,
 a.sponsor:hover
 {
     display: inline-block;
-    vertical-align: top;
+    vertical-align: middle;
   text-decoration: none;
 }
 
